# keyman

./: Cargo.toml  README.md  Rocket.toml  database.sqlite  database.sqlite-shm  database.sqlite-wal  keyFile  peda-session-5007.txt  task.md
doc/: task.md
migrations/2022-09-12-124903_create_passwords/: down.sql  up.sql
src/: auth.rs  main.rs  models.rs  repositories.rs  schema.rs
src/endpoints/: error.rs  key.rs  login.rs  mod.rs  register.rs
src/testres/: mod.rs  test_crypto.rs
src/tools/: cryptos.rs  mod.rs
