[package]
name = "keyman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"]}
simplelog = "0.12.0"
log = "0.4.17"
diesel = { version = "1.4.8", features = ["sqlite"] }
hex = "0.4.3"
base64 = "0.13.0"
rand = "0.8.5"

# used in crypto mod 
rust-crypto = "0.2.36"
pbkdf2 = "0.10"
# hash
sha2 = "0.10.6"
hmac = "0.12.1"

rand_core = { version = "0.6", features = ["std"] }
serde = "1.0.117"
serde_derive = "1.0.117"
serde_with = "2.0.1"
serde_json = "1.0.59"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["diesel_sqlite_pool"]